--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -25,6 +25,8 @@ platforms:
     driver_config:
       box: opscode-centos-7.0 
       box_url: http://opscode-vm-bento.s3.amazonaws.com/vagrant/virtualbox/opscode_centos-7.0_chef-provisionerless.box
+      synced_folders:
+        - [ "/Users/evan/development/go/thylacine", "/mnt/go" ]
   - name: opscode-debian77
     driver_plugin: vagrant
     driver_config:
